postgre_ebnf
RELOPTINFO = 'RELOPTINFO (',NUMBER,'): ' ROWS, WIDTH ,LBR,PATHLIST
PATHLIST = 'path list:',{LBR,ACCESSSSTRATEGY,'(',NUMBER,')',ROWS,COST,LBR,[PATHKEYS],LBR}
PATHKEYS = '((,'{STRING,','},STRING,'))',LBR
COST = 'cost=',FLOAT,'..',FLOAT
ACCESSSTRATEGY = 'IdxScan' | 'SeqScan'
ROWS = 'rows=',NUMBER
WIDTH = 'width=',NUMBER
LBR = '\r\n'

